--- a/TODO
+++ b/TODO
@@ -6,3 +6,5 @@ Footer (HTML/CSS)
 Favorite Heroes (JS/CSS)
 Compare Heroes (JS/CSS)
 Fix scaling (CSS)
+
+Refference: https://www.startyourline.com/index.html
